# OpenMP-MPI-Image-Processing

./: .gitignore  LICENSE  Makefile  README.md  meson.build  task.md
data/: benchmark_data.csv  plot_benchmark.py
data/chronos/: distributed_data.csv  multithreaded_data.csv  serial_data.csv  speedups_data.csv  time_data.csv
data/values/: distributed_data.csv  time_data.csv
docs/: mpi_heat.c
scripts/: clear_data.sh  clear_images.sh  kill_process.sh  run_sweep.sh  setup_project.sh
src/: main.c
src/benchmark/: benchmark.c  benchmark.h  benchmark_io.c  benchmark_io.h  benchmark_run.c  benchmark_run.h  kernel_run.c  kernel_run.h
src/bmp/: bmp_io.c  bmp_io.h  mpi_bmp_io.c  mpi_bmp_io.h
src/config/: files.c  files.h  kernel.c  kernel.h
src/constants/: files.c  files.h
src/convolution/: convolution.c  convolution.h
src/errors/: errors.c  errors.h
src/file_utils/: file_utils.c  file_utils.h
src/kernel/: kernel.c  kernel.h
